# pango_render_text_real_time

./: README.md
cpp_back/: CMakeLists.txt  FfmpegTextRender  build.sh  main.cpp  render  render_pngs
cpp_back/old_bk/: main.cpp
go_http_Server/: serve_frames.go
react-ui/: index.html  package.json  vite.config.js
react-ui/src/: App.css  App.jsx  AutoWidthInput.jsx  FrameWithDragText.jsx  WebSocketClient.jsx
react-ui/src/ui_old/: FRameWithDragText_with_newload.jsx  FrameCanvas.jsx  FrameCanvas2.jsx  FramePlayer.jsx  FrameSlider.jsx  FrameWithDragText3.jsx  FrameWithDragText4.jsx  Server_test.jsx  WebSocketClient_old.jsx  main.jsx
trash/: build.sh  main.cppp.bk  working_main.cpp.direct
